Bug 724841 - Retain case when sending location bar text to search engine service r=bz