docshell/base/nsDocShell.h
@@ -848,7 +848,8 @@ private:
     nsCOMPtr<nsIAtom> mForcedCharset;
     nsCOMPtr<nsIAtom> mParentCharset;
     nsTObserverArray<nsWeakPtr> mPrivacyObservers;
-    PRInt32          mParentCharsetSource;
+    PRInt32           mParentCharsetSource;
+    nsCString         mOriginalUriString;
 
 #ifdef DEBUG
     // We're counting the number of |nsDocShells| to help find leaks
